test_debug_3.txt
Downloading https://services.gradle.org/distributions/gradle-8.12-bin.zip
.............10%.............20%.............30%.............40%.............50%.............60%.............70%.............80%.............90%.............100%
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.12/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :compileJava
> Task :processResources UP-TO-DATE
> Task :classes

> Task :compileTestJava
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestCanvas.java:20: error: cannot find symbol
        assertNotNull(canvas.getRhinoRuntime(), "RhinoRuntime should not be null");
                            ^
  symbol:   method getRhinoRuntime()
  location: variable canvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestCanvas2D.java:71: error: cannot find symbol
        scope = javaCanvas.getRhinoRuntime().getScope();
                          ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestCanvas2D.java:2150: error: cannot find symbol
                javaCanvas.getRhinoRuntime().getScope(),
                          ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestFontFace.java:40: error: cannot find symbol
        canvas.getRhinoRuntime().exec(new FileReader("test/test-font-face.js"), "test-font-face.js");
              ^
  symbol:   method getRhinoRuntime()
  location: variable canvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestFontLoading.java:63: error: cannot find symbol
        scope = javaCanvas.getRhinoRuntime().getScope();
                          ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestFontLoading.java:120: error: cannot find symbol
            javaCanvas.getRhinoRuntime().getScope().put("ctx", javaCanvas.getRhinoRuntime().getScope(), ctx);
                      ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestFontLoading.java:120: error: cannot find symbol
            javaCanvas.getRhinoRuntime().getScope().put("ctx", javaCanvas.getRhinoRuntime().getScope(), ctx);
                                                                         ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestFontLoading.java:121: error: cannot find symbol
            javaCanvas.getRhinoRuntime().exec(
                      ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestImageBitmap.java:65: error: cannot find symbol
        scope = javaCanvas.getRhinoRuntime().getScope();
                          ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestJavaFX.java:68: error: cannot find symbol
        Scriptable scope = javaCanvas.getRhinoRuntime().getScope();
                                     ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestRhino.java:48: error: cannot find symbol
        Scriptable scope = javaCanvas.getRhinoRuntime().getScope();
                                     ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestSharedWorker.java:66: error: cannot find symbol
        Scriptable scope = javaCanvas.getRhinoRuntime().getScope();
                                     ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestSharedWorker.java:112: error: cannot find symbol
            Scriptable scope = javaCanvas.getRhinoRuntime().getScope();
                                         ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestSharedWorker.java:273: error: cannot find symbol
        Scriptable scope = javaCanvas.getRhinoRuntime().getScope();
                                     ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestWorker.java:60: error: cannot find symbol
        Scriptable scope = javaCanvas.getRhinoRuntime().getScope();
                                     ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestWorker.java:92: error: cannot find symbol
            Scriptable scope = javaCanvas.getRhinoRuntime().getScope();
                                         ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
16 errors

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///C:/wip/w3canvas/javacanvas/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\wip\w3canvas\javacanvas\src\test\java\com\w3canvas\javacanvas\test\TestCanvas.java:20: error: cannot find symbol
          assertNotNull(canvas.getRhinoRuntime(), "RhinoRuntime should not be null");
                              ^
    symbol:   method getRhinoRuntime()
    location: variable canvas of type JavaCanvas
  16 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 42s
3 actionable tasks: 2 executed, 1 up-to-date
